# ci_opengl_template

./: .appveyor.yml  .codacy.yml  .codecov.yml  .codedocs  .doxygen.txt  .gitignore  .travis.yml  .travis.yml.initial  CMakeLists.txt  README.md  main.cpp
assets/: CMakeLists.txt
assets/scripts/: Player.lua  tada.lua
build_vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  ci_opengl_template.sln  cmake_install.cmake
build_vs/lib/Debug/: gtest_maind.lib
build_vs/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ci_opengl_template.vcxproj  ci_opengl_template.vcxproj.filters  cmake_install.cmake
build_vs/src/imgui_sfml/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  imgui_sfml.sln  imgui_sfml.vcxproj  imgui_sfml.vcxproj.filters
build_vs/src/imgui_sfml/Debug/: imgui_sfml.lib
build_vs/src/lua/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  lua.sln  lua.vcxproj  lua.vcxproj.filters
build_vs/src/lua/Debug/: lua.lib
build_vs/src/mathematics/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  mathematics.sln  mathematics.vcxproj  mathematics.vcxproj.filters
build_vs/src/utils/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  utils.sln  utils.vcxproj  utils.vcxproj.filters
build_vs/src/utils/Debug/: utils.lib
build_vs/tests/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
build_vs/tests/integration/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  integration_test_robot.vcxproj  integration_test_robot.vcxproj.filters  integration_tests.sln  integration_tests.vcxproj  integration_tests.vcxproj.filters
build_vs/tests/unit/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  unit_test_robot.vcxproj  unit_test_robot.vcxproj.filters  unit_tests.sln  unit_tests.vcxproj  unit_tests.vcxproj.filters
build_vs/tools/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
examples/: CMakeLists.txt
examples/cppfs/: CMakeLists.txt  cppfs_example.cpp
examples/cppfs_example/: cppfs_example.cpp
examples/lua/: CMakeLists.txt  lua_example.cpp
examples/opengl3_assimp/: CMakeLists.txt  opengl3_assimp_example.cpp
examples/opengl3_box2D/: CMakeLists.txt  opengl3_box2D_example.cpp
examples/opengl3_glfw/: CMakeLists.txt  opengl3_glfw_example.cpp
examples/opengl3_imgui/: CMakeLists.txt  opengl3_imgui_example.cpp
examples/opengl3_imgui/imgui_sfml/: CMakeLists.txt  imgui-SFML.cpp
examples/sfml/: CMakeLists.txt  sfml_example.cpp
examples/stb/: CMakeLists.txt  stb_example.cpp
externals2/Box2D/: CMakeLists.txt
externals2/cppfs/source/: CMakeLists.txt
externals2/stb/: CMakeLists.txt
include/: allo.h
scripts/install_build_test/: install_build_test_ vs2017_NMake.txt  install_build_test_vs2017_MSBuild.txt  install_build_test_xcode7_3.txt
scripts/install_deps/: install_deps_ubuntu.txt
src/: CMakeLists.txt  GLFWEnvironment.cpp  GLFWEnvironment.h  ResourceManager.cpp  ResourceManager.h  SpriteRenderer.cpp  SpriteRenderer.h  complex.cpp  complex.hpp  hello.cpp  hello.h  imgui_main.cpp  main.cpp
src/HUD/: CMakeLists.txt  ImGuiHUD.cpp  ImGuiHUD.h  menubar.h  popups.h
src/components/: BoxPhysics.cpp  BoxPhysics.h  CMakeLists.txt  ContactListener.cpp  ContactListener.h  Input.cpp  Input.h  Shader.cpp  Shader.h  Sprite.h  Texture.cpp  Texture.h
src/entities/: CMakeLists.txt  Entity.h
src/events/: CMakeLists.txt  EventSubscriber.h  Events.h
src/imgui_sfml/: CMakeLists.txt
src/lua/: CMakeLists.txt  LuaScript.cpp
src/mathematics/: CMakeLists.txt  complex.cpp  complex.hpp
src/mathematics/include/mathematics/: complex.hpp
src/scenes/: CMakeLists.txt  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
src/systems/: BoxPhysicsSystem.cpp  BoxPhysicsSystem.h  CMakeLists.txt  InputSystem.cpp  InputSystem.h  PlayerControl.cpp  PlayerControl.h  System.cpp  System.h
src/utils/: CMakeLists.txt  ComponentStore.h  FileSystem.cpp  FileSystem.h  FileSystem.hpp  InputEnum.h  RunningConfigEnum.h  filesystem.h  fps.cpp  fps.h  typ.cpp  typ.h  types.h
src/utils/legacy/: Array.h  Array2.h
test/: CMakeLists.txt  test_hello.cpp
tests/: CMakeLists.txt  all_tests.cpp  complex_main.cpp  test_hello.cpp
tests/integration/: CMakeLists.txt  test_integration_main.cpp  test_robot.cpp
tests/unit/: CMakeLists.txt  test_complex.cpp  test_robot.cpp  test_unit_main.cpp
tests/unit/mathematics/: CMakeLists.txt  test_complex.cpp
tools/: CMakeLists.txt  UtilFunctions.cmake
(+112 files in other folders)
