# ------------------------------------------------------------------------------
# File: CMakeLists.txt
# Created by Spark on 28/04/2019.
# ------------------------------------------------------------------------------

add_subdirectory(cppfs)

add_subdirectory(lua)

add_subdirectory(opengl3_glfw)

add_subdirectory(opengl3_imgui)

add_subdirectory(opengl3_box2D)

add_subdirectory(opengl3_assimp)

add_subdirectory(sfml)

#add_subdirectory(stb)